fix(vguide): retain context facts and reconcile prompt accounting